samples/_failures_safe/1761335779_b7a08f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c52cf30f.c: In function ‘main’:
./samples/SAFE/__tmp_c52cf30f.c:154:21: error: expected declaration or statement at end of input
  154 |                     print_matrix(&result, "A+B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_c52cf30f.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c52cf30f.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c52cf30f.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c52cf30f.c:154:21: error: expected declaration or statement at end of input
